# workshop-streamlit-aovivo

./: pyproject.toml
exemplo/: main.py
