[tool.poetry]
name = "workshop-streamlit-aovivo"
version = "0.1.0"
description = ""
authors = ["oliveiraphm <oliveiraphm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
streamlit = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
